--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
